2003-02-10  Dani Carbonell  <bocata@panete.net>

	* src/Makefile.am: added -DGDK_DISABLE_DEPRECATED to the compilation
	parameters.
	
	* src/client.c: fixed the connecting dialog behaviour, now GTetrinet
	doesn't hang up while the hostname is resolved.
	(client_process): this function now launches the thread that
	resolvers the hostname, does gtk_iterations while the thread finishes,
	and continues the normal connection protocol.
	(client_connect): renamed to client_resolv_hostname, now it just
	resolves the hostname, the rest of the functionality was moved to
	client_process.
	
	* src/fields.c: removed two GDK obsolete function calls.
	
	* src/gtetrinet.c: start the GThread system, if it's not started
	yet.

2003-02-09  Jordi Mallach  <jordi@sindominio.net>

	* configure.in: add debug flags if compiling from CVS.
	* src/Makefile.am: remove $(GTET_DEBUG).

2003-02-09  Dani Carbonell  <bocata@panete.net>

	* client.c: added gnome.h so some strings can be localized. Removed
	most of the cruft, now gtetrinet works with only one process.
	(client_inputfunc): removed.
	(client_cleanpipe): removed.
	(client_mainloop): removed.
	(client_initpipes): removed.
	(client_destroypipes): removed.
	(client_init): it's no longer needed to check for the child.
	(client_connectcancel): removed.
	(client_destroy): removed.
	(client_outmessage): directly send it to the socket.
	(client_inmessage): directly parse it in tetrinet.c.
	(client_process): string marked for translating. Now, the client
	process just sets up the connection and connects.
	(client_connect): sets up the g_io_channel.
	(client_disconnect): shutdowns the g_io_channel, closing the GSource
	event and shutting down also the socket.
	(io_channel_cb): callback to handle the event of new data coming
	into the socket.
	(client_sendmsg): sends the data using g_io_channel_write functions.
	(client_readmsg): reads the data using g_io_channel_read functions.
	
	* client.h: removed functions.
	