@@ -1,4 +1,5 @@
 src/commands.c
+src/client.c
 src/config.c
 src/dialogs.c
 src/fields.c
